# ds4

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  download_model.sh  ds4.c  ds4.h  ds4_metal.h  ds4_metal.m  package-lock.json
.github/instructions/: ask-question.instructions.md
ds4-rs/: Cargo.toml  build.rs
ds4-rs/src/: bridge.rs  gguf.rs  graph.rs  layer_enc.rs  lib.rs  main.rs  metal_args.rs  model.rs  model_view.rs  ops.rs  pipeline.rs  server.rs  session.rs  tensor.rs  tokenizer.rs  weights.rs
ds4-rs/src/metal/: dsv4_rope.metal
metal/: ds4_metal_defs.h
src/: ffi.rs  gguf.rs  lib.rs  metal.rs  metal_bridge.rs  metal_kernels.rs  metal_kernels_old.rs  metal_kernels_rust.rs  metal_native.rs  metal_runtime.rs
tests/: integration.rs
