[package]
name = "ds4"
version = "0.1.0"
edition = "2021"
description = "DeepSeek V4 Flash inference engine — pure Rust + Metal"

[lib]
name = "ds4"
path = "src/lib.rs"

[[bin]]
name = "ds4f"
path = "src/bin/ds4f.rs"

[dependencies]
anyhow = "1"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSError", "NSObject", "NSThread", "NSEnumerator", "NSArray"] }
objc2-metal = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
