[package]
name = "ds4-rs"
version = "0.1.0"
description = "DS4 inference engine Rust port with Metal GPU backend and HTTP server"
edition = "2021"

[dependencies]
metal = "0.20"
objc = "0.2"
clap = { version = "4", features = ["derive"] }

[build-dependencies]

[[bin]]
name = "ds4f"
path = "src/bin/ds4f.rs"
