[package]
name = "ds4-rs"
version = "0.1.0"
description = "DS4 inference engine Rust port with Metal GPU backend and HTTP server"
edition = "2021"

[dependencies]
objc2-metal = { version = "0.3.2", features = [
    "MTLAllocation",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDataType",
    "MTLDevice",
    "MTLFunctionConstantValues",
    "MTLLibrary",
    "MTLResource",
    "block2",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSURL",
    "NSError",
] }
objc2 = "0.6"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"

[build-dependencies]

[[bin]]
name = "ds4f"
path = "src/bin/ds4f.rs"
